--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Clean up
+        run: |
+          # Remove everything except public directory
+          find . -mindepth 1 -maxdepth 1 ! -name public -exec rm -rf {} +
+          # Move public contents to root
+          mv public/* .
+          rm -rf public
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./
