--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,25 +5,22 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Clean up
-        run: |
-          # Remove everything except public directory
-          find . -mindepth 1 -maxdepth 1 ! -name public -exec rm -rf {} +
-          # Move public contents to root
-          mv public/* .
-          rm -rf public
-          # Ensure .nojekyll exists
-          touch .nojekyll
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./public
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
-          force_orphan: true
+        uses: actions/deploy-pages@v2
